--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_API_ENDPOINT = 'http://localhost:8080/api'
+VITE_BASE_URL = '/challenge-front/'
 MONGODB_CONNECT_URI ='mongodb+srv://honzikoi:SuperTestPass123@analytic-challenge.2q15bqi.mongodb.net/?retryWrites=true&w=majority'
 
